*Empty MediaWiki Message*

--- a/Ондоурасъ.mw
+++ b/Ондоурасъ.mw
@@ -7,10 +7,12 @@
 | Глава = 
 | area =
 | Людии = 6,9 леѡдръ
-| Почѧта = 1823
+| Почѧта = 1821
 }}
-'''Ондѹрасъ''' ({{Lang-es|Honduras}}), епїсимьно имѧ Димократї Ондѹрасъ ({{lang-es|República de Honduras}}), [[Срѣдьн Амерїка|Срѣдьнѩ Амерїци]] дрьжава ѥстъ. Стольнъ градъ [[Тегѹсигал҄ьпа]] ѥстъ. Дрьжавьнъ ѩзыкъ [[Їспаньскъ ѩзык|їспаньскъ]] ѥстъ. Людии обитаѥтъ 6,9 леѡдръ.
+'''Ондѹ́расъ''' ({{Lang-es|Honduras}}), епїсимьно имѧ '''Димократї Ондѹрасъ''' ({{lang-es|República de Honduras}}), [[Срѣдьн Амерїка|Срѣдьнѩ Амерїци]] дрьжава ѥстъ. Стольнъ градъ [[Тегѹсигал҄ьпа]] ѥстъ. Дрьжавьнъ ѩзыкъ [[Їспаньскъ ѩзык|їспаньскъ]] ѥстъ. Людии обитаѥтъ 6,9 леѡдръ.
 
+== Їcторї ==
+Лѣта 1525 с҄и земли въшьли бѣаше въ съставъ Кралѥвьства [[Їспанї]]. Лѣта 1821 Ондѹрасъ стал ѥстъ пакы самостотел҄ьна дрьжава.
 == Ондѹраса чѧсти ==
 Ондѹраса чѧсти департаменти нарицаютъ.
 {| align="center" class="standard"
