--- a/Ондоурасъ.mw
+++ b/Ондоурасъ.mw
@@ -2,122 +2,17 @@
 | знамѧ= [[Видъ:Flag of Honduras.svg|150px]]
 | знакъ = [[Видъ:Honduras coa.png|100px]]
 | map = LocationHonduras.png
-| Стольнъ градъ = [[Тегѹсигал҄ьпа]] 
-| Ѩзыкъ = [[Їспаньскъ ѩзык|їспаньскъ]] 
+| Стольнъ градъ = [[Тегѹсигалпа]] 
+| Ѩзыкъ = [[Їспанїискъ ѩзык|їспанїискъ]] 
 | Глава = 
 | area =
 | Людии = 6,9 леѡдръ
 | Почѧта = 1821
 }}
-'''Ондѹ́расъ''' ({{Lang-es|Honduras}}), епїсимьно имѧ '''Димократї Ондѹрасъ''' ({{lang-es|República de Honduras}}), [[Срѣдьн Амерїка|Срѣдьнѩ Амерїци]] дрьжава ѥстъ. Стольнъ градъ [[Тегѹсигал҄ьпа]] ѥстъ. Дрьжавьнъ ѩзыкъ [[Їспаньскъ ѩзык|їспаньскъ]] ѥстъ. Людии обитаѥтъ 6,9 леѡдръ.
+'''Ондѹ́расъ''' ({{Lang-es|Honduras}}), епїсимьно имѧ '''Димократї Ондѹрасъ''' ({{lang-es|República de Honduras}}), [[Срѣдьн Амерїка|Срѣдьнѩ Амерїкы]] дрьжава ѥстъ. Стольнъ градъ [[Тегѹсигалпа]] ѥстъ. Дрьжавьнъ ѩзыкъ [[Їспанїискъ ѩзык|їспанїискъ]] ѥстъ. Людии обитаѥтъ 6,9 леѡдръ.
 
 == Їcторї ==
-Лѣта 1525 с҄и земли въшьли бѣаше въ съставъ Кралѥвьства [[Їспанї]]. Лѣта 1821 Ондѹрасъ стал ѥстъ пакы самостотел҄ьна дрьжава.
-== Ондѹраса чѧсти ==
-Ондѹраса чѧсти департаменти нарицаютъ.
-{| align="center" class="standard"
-|+
-! |Департаментъ
-! |Главьнъ градъ
-! |Площѧдь
-! |Людии обитаѥтъ (2001)
-|-----
-| Атлантїда
-| [[Ла-Сейба]]
-| 4 251
-| 315 041
-|-----
-| Валле
-| [[Накаоме]]
-| 1 565
-| 141 811
-|-----
-| Грасиасъ-а-Диосъ
-| [[Пѹерто-Лемпира]]
-| 16 630
-| 56 679
-|-----
-| Интибѹка
-| [[Ла-Есперанса]]
-| 3 072
-| 175 107
-|-----
-| Исласъ-де-ла-Баи
-| [[Роатанъ]]
-| 261
-| 31 552
-|-----
-| Иоро
-| [[Иоро]]
-| 7 939
-| 440 231
-|-----
-| Камаиагѹа
-| [[Камаиагѹа]]
-| 5 196
-| 332 314
-|-----
-| Колонъ
-| [[Трухильо]]
-| 8 875
-| 218 426
-|-----
-| Копанъ
-| [[Санта-Роса-де-Копанъ]]
-| 3 203
-| 276 083
-|-----
-| Кортесъ
-| [[Сан-Педро-Сѹла]]
-| 3 954
-| 1 077 538
-|-----
-| Ла-Пасъ
-| [[Ла-Пасъ]]
-| 2 331
-| 147 787
-|-----
-| Лемпира
-| [[Грасиасъ]]
-| 4 290
-| 243 971
-|-----
-| Окатепеке
-| [[Окатепеке]]
-| 1 680
-| 102 176
-|-----
-| Оланхо
-| [[Хѹтикал҄ьпа]]
-| 24 351
-| 384 881
-|-----
-| Санта-Барбара
-| [[Санта-Барбара]]
-| 5 115
-| 327 343
-|-----
-| Франсиско Морасанъ
-| [[Тегѹсигал҄ьпа]]
-| 6 298
-| 259 673
-|-----
-| Срѣдьнъ
-| [[Тегѹсигал҄ьпа]]
-| 1 648
-| 850 227
-|-----
-| Чолѹтека
-| [[Чолѹтека]]
-| 4 211
-| 364 684
-|-----
-| Ел҄ь-Параисо
-| [[Юскаранъ]]
-| 7 218
-| 331 351
-|+
-|}
+Лѣта 1525 землѩ въшьли бѣашѧ въ съставъ Кралѥвьства [[Їспанї]]. Лѣта 1821 Ондѹрасъ сътворѥнъ самостотельна дрьжава ѥстъ.
 
 == Зьри такожде ==
 
