--- a/Їспанїꙗ.mw
+++ b/Їспанїꙗ.mw
@@ -3,13 +3,13 @@
 | знакъ = [[image:Escudo de España.png|80px]]
 | map = LocationSpain.svg 
 | Стольнъ градъ = [[Мадрїдъ]]
-| Ѩзыкъ = [[Їспаньскъ ѩзык|їспаньскъ]] 
+| Ѩзыкъ = [[Їспанїискъ ѩзык|їспанїискъ]] 
 | Глава = 
 | area =
 | Людии =  41 леѡдръ
 | Почѧта = 
 }}
-'''Їспанї''' ({{Lang-es|España}}) [[Южьна Еѵрѡпа|Южьны Еѵрѡпы]] дрьжава ѥстъ, стольнъ градъ [[Мадрїдъ]] ѥстъ. Їспанї сътворѥна лѣта 1492 ѥстъ. Людии обитаѥтъ 41 леѡдръ. Бол҄ьша града [[Мадрїдъ]] и [[Барселона]] ѥсте, дрьжавьнъ [[їспаньскъ ѩзыкъ]] ѥстъ.
+'''Їспанї''' ({{Lang-es|España}}) [[Южьна Еѵрѡпа|Южьны Еѵрѡпы]] дрьжава ѥстъ, стольнъ градъ [[Мадрїдъ]] ѥстъ. Їспанї сътворѥна лѣта 1492 ѥстъ. Людии обитаѥтъ 41 леѡдръ. Бол҄ьша града [[Мадрїдъ]] и [[Барселона]] ѥсте, дрьжавьнъ [[їспанїискъ ѩзыкъ]] ѥстъ.
 {{Commonscat|Spain}}
 [[Катигорї:Еѵрѡпа]]
 [[Катигорї:Їспанї]]
