robot  Adding: [[yi:בעלארוסיש]]

--- a/Бѣлороусьскъ_ѩꙁꙑкъ.mw
+++ b/Бѣлороусьскъ_ѩꙁꙑкъ.mw
@@ -68,7 +68,6 @@
 [[pt:Língua bielorrussa]]
 [[ro:Limba bielorusă]]
 [[ru:Белорусский язык]]
-[[ru-sib:Беларуской говор]]
 [[simple:Belarusian language]]
 [[sk:Bieloruština]]
 [[sl:Beloruščina]]
@@ -79,4 +78,5 @@
 [[th:ภาษาเบลารุส]]
 [[tr:Beyaz Rusça]]
 [[uk:Білоруська мова]]
+[[yi:בעלארוסיש]]
 [[zh:白俄罗斯语]]
