robot  Modifying: [[ru:Варна]]

--- a/Варна.mw
+++ b/Варна.mw
@@ -44,7 +44,7 @@
 [[pms:Varna]]
 [[pt:Varna (Bulgária)]]
 [[ro:Varna]]
-[[ru:Варна (город)]]
+[[ru:Варна]]
 [[sh:Varna]]
 [[sk:Varna (Bulharsko)]]
 [[sr:Варна]]
