--- a/Гатчина.mw
+++ b/Гатчина.mw
@@ -9,6 +9,7 @@
 |}}
 '''Гатчина''' ({{Lang-ru|Гатчина}}) [[Рѡсї|Рѡсїѩ]] [[Ленинградська область|Лениноградьскы области]] [[Гатчинська чѧсть|Гатчинськы чѧсти]] главьнъ градъ ѥстъ, ѥзера [[Бѣло (ѥзеро)|Бѣла]] брѣѕѣ лежитъ. Людии обитаѥтъ 89 тысѫщь. Основана лѣта 1499 ѥстъ, наречена градъ съ лѣта 1796 ѥстъ. Дьньсь наиболии градъ [[Лениноградьска область|Лениноградьскы]] области ѥстъ.
 
+{{commonscat|Gatchina}}
 [[Катигорї:Гради]]
 [[Катигорї:Лениноградьска область]]
 [[Катигорї:Рѡсї]]
