Undo revision 9096 by [[Special:Contributions/192.103.98.4|192.103.98.4]] ([[User talk:192.103.98.4|Talk]])

--- a/Їспанїꙗ.mw
+++ b/Їспанїꙗ.mw
@@ -9,7 +9,7 @@
 | Людии =  41 леѡдръ
 | Почѧта = 
 }}
-'''Їспанї''' ({{Lang-es|España}}) [[Южьна Еѵрѡпа|Южьны Еѵрѡпы]] дрьжава ѥстъ, стольнъ градъ [[Мадридъ]] ѥстъ. Їспанї сътворѥна лѣта 1492 ѥстъ. Людии обитаѥтъ 41 леѡдръ. Бол҄ьша града [[Мадридъ]] и [[Барселона]] ѥсте, дрьжавьнъ [[їспанїискъ ѩзыкъ]] ѥстъ. йа тамъ отдыхалъ.
+'''Їспанї''' ({{Lang-es|España}}) [[Южьна Еѵрѡпа|Южьны Еѵрѡпы]] дрьжава ѥстъ, стольнъ градъ [[Мадридъ]] ѥстъ. Їспанї сътворѥна лѣта 1492 ѥстъ. Людии обитаѥтъ 41 леѡдръ. Бол҄ьша града [[Мадридъ]] и [[Барселона]] ѥсте, дрьжавьнъ [[їспанїискъ ѩзыкъ]] ѥстъ.
 {{Commonscat|Spain}}
 [[Катигорї:Еѵрѡпа]]
 [[Катигорї:Їспанї]]
