*Empty MediaWiki Message*

--- a/Спєктроумъ.mw
+++ b/Спєктроумъ.mw
@@ -1,6 +1,6 @@
-'''Спектрѹмъ''' ({{lang-en|ZX Spectrum}}) ѥстъ [[компьютеръ]] [[Велика Британї|англїискы]]. Съзьданъ лѣта 1982 ѥстъ. Ричардъ Ал҄твасеръ ({{lang-en|Richard Altwasser}}) съзьда схимѫ. Стивенъ Викерсъ ({{lang-en|Steven Vickers}}) написа [[програма|програмѫ]] [[ROM]]. Фирма Sinclair Research Ltd събирааше Спектрѹмы.
+'''Спектрѹмъ''' ({{lang-en|ZX Spectrum}}) ѥстъ [[съмѣтател҄ь]] [[Велика Британї|англїискы]]. Съзьданъ лѣта 1982 ѥстъ. Ричардъ Алтвассеръ ({{lang-en|Richard Altwasser}}) съзьда схимѫ. Стивенъ Викерсъ ({{lang-en|Steven Vickers}}) написа [[программа|программѫ]] [[ROM]]. Фирма Sinclair Research Ltd събирааше Спектрѹмы.
 
-Мнози рѹськы виды Спектрѹмъ сѫтъ.
+Мнози рѹськы виды Спектрѹмъ сѫтъ: Пентагонъ, Скорпїонъ, Профи, АТМ Тѹрбо и дрѹзи.
 
 == [[Интернетъ|Интернетѣ]] ==
 *[http://worldofspectrum.org World of Spectrum]
