*Empty MediaWiki Message*

--- a/Бѣла_Роусь.mw
+++ b/Бѣла_Роусь.mw
@@ -11,7 +11,8 @@
 }}
 '''Бѣла Рѹсь''' ({{Lang-be|Беларусь}}, {{Lang-ru|Белоруссия, Беларусь}}) въсточьныѩ [[Еѵрѡпа|Еѵрѡпы]] дрьжава ѥстъ. Дрьжавьна ѩзыка [[Ѩзыкъ бѣлорѹсьскъ|бѣлорѹсьскъ]] и [[Ѩзыкъ рѹсьскъ|рѹсьскъ]] ѥсте. Бѣлы Рѹси стольнъ градъ [[Мѣньскъ]] ѥстъ. Бѣлѣ Рѹси людии 9 леѡдръ обитаѥтъ.
 
-
+{{commonscat|Belarus}}
+{{Словѣньскы дрьжавы}}
 [[Category:Бѣла Рѹсь| ]]
 
 [[am:ቤላሩስ]]
