*Empty MediaWiki Message*

--- a/Оукраина.mw
+++ b/Оукраина.mw
@@ -11,6 +11,8 @@
 }}
 '''Ѹкраина''' (''Україна'') въсточьныѩ [[Еѵрѡпа|Еѵрѡпы]] дрьжава ѥстъ. Cтольнъ градъ [[Кыѥвъ]] ѥстъ. Ѹкраины дрьжавьнъ [[ѹкраиньскъ ѩзыкъ|ѹкраиньскъ]] ѩзыкъ ѥстъ. Ѹкраинѣ людии 46,4 леѡдръ обитаѥтъ.
 
+{{commonscat|Ukraine}}
+{{Словѣньскы дрьжавы}}
 [[Category:Ѹкраина|*]]
 
 [[af:Oekraïne]]
