*Empty MediaWiki Message*

--- a/Чрьна_Гора.mw
+++ b/Чрьна_Гора.mw
@@ -14,6 +14,10 @@
 == Їсторї ==
 
 Давѣ была самостотел҄ьна бѣаше, 1918 годѣ по [[Прьва Свѣтьна Воина|Прьвыѩ Свѣтьныѩ Воины]] въшьла бѣаше въ съставъ Кралѥвьства Срьбъ, Хръватъ и Словѣньць (послѣди именѹѥма [[Югослави]], по [[Вътора Свѣтьна Воина|Въторыѩ Свѣтьныѩ Воины]] же Социалистичьска  Съвѫзьна Димократї Югослави (ССДЮ) бѣаше). Послѣди распада ССДЮ въшьла бѣаше въ съвѫзьнѫ дрьжавѫ Срьбиѭ и Чрьногориѥ, 2006 годѣ по въсенародьна гласовани Чрьна Гора стала ѥстъ пакы самостотел҄ьна дрьжава. 
+
+== Зьри такожде ==
+{{commonscat|Montenegro}}
+{{Словѣньскы дрьжавы}}
 [[Category:Чрьна Гора| ]]
 
 [[af:Montenegro]]
