*Empty MediaWiki Message*

--- a/Срьбїꙗ.mw
+++ b/Срьбїꙗ.mw
@@ -24,10 +24,11 @@
 *[[Призрѣнь]]
 
 == Зьри такожде ==
+{{commonscat|Serbia}}
 *[[Босна]]
 *[[Чрьна Гора]]
 *[[Хръватьска]]
-
+{{Словѣньскы дрьжавы}}
 [[Category:Срьбї|*]]
 [[Category:Страны]]
 
