*Empty MediaWiki Message*

--- a/Кꙑѥвъ.mw
+++ b/Кꙑѥвъ.mw
@@ -9,7 +9,7 @@
 |}}
 
 [[Image:Andriyivskyy Uzviz.jpeg|thumb|left|Възвозъ апостола Андреѩ Кыѥвѣ]]
-'''Кыѥвъ''' ({{lang-uk|Київ}}) градъ ѥстъ [[Дънѣпръ|Дънѣпрѣ]], стольнъ градъ [[Ѹкраина|Ѹкраины]].
+'''Кыѥвъ''' ({{lang-uk|Київ}}) градъ ѥстъ на [[Дънѣпръ|Дънѣпрѣ]] на рѣцѣ, стольнъ градъ [[Ѹкраина|Ѹкраинѣ]].
 
 Кыѥвъ древлѥ бѣаше стольнъ градъ [[Рѹсь|Рѹси]].
 
