*Empty MediaWiki Message*

--- a/Пол҄ьска.mw
+++ b/Пол҄ьска.mw
@@ -3,7 +3,7 @@
 | знакъ = [[image:Coat of arms of Poland-official.png|80px]]
 | map = LocationPoland.svg 
 | Стольнъ градъ = [[Варшава]] 
-| Ѩзыкъ = [[Польскъ ѩзыкъ|пол̑ьскъ]] 
+| Ѩзыкъ = [[пол̑ьскъ ѩзыкъ|пол̑ьскъ]] 
 | Глава = [[Льхъ Качиньскыи]] 
 | area =
 | Людии = 38,1 леѡдръ
@@ -11,6 +11,8 @@
 }}
 '''По́л̑ьска''' ([[пол̑ьскъ ѩзыкъ|пол̑ьскы]]: ''Polska''), епїсимьно имѧ ''Димократї По́л̑ьска'' ([[пол̑ьскъ ѩзыкъ|пол̑ьскы]]: ''Rzeczpospolita Polska''), срѣдьнѩ [[Еѵрѡпа|Еѵрѡпы]] дрьжава ѥстъ. Стольнъ градъ [[Варшава]] ѥстъ. Дрьжавьнъ [[Пол҄ьскъ ѩзыкъ|пол̑ьскъ ѩзыкъ]] ѥстъ. Людии обитаѥтъ 38,1 леѡдръ.
 
+{{commonscat|Poland}}
+{{Словѣньскы дрьжавы}}
 [[Category:Пол̑ьска|*]]
 
 [[af:Pole]]
