--- a/Ищислитєл҄ь.mw
+++ b/Ищислитєл҄ь.mw
@@ -2,7 +2,7 @@
 [[Image:Computer-aj aj ashton 01.svg|thumb|200px| Нынщьн поставьна съмѣтател образьнъ видъ]]
 '''Съмѣтател҄ь''' ([[англїискъ ѩзыкъ|англїиска]] словесе ''computer'' прѣложениѥ) плирофорїѩ ищишлѥни, приѩти, прѣображени, хранѥни и изложени ѹстрои ѥстъ съгласьно съ прѣжде съставлѥномь алгорѷѳмомь (съмѣтател҄ьскоѭ программоѭ). Бывьшѹ съмѣтател҄ьскы еры начѧлѹ людиѥ дѹмаахѫ ко съмѣтател҄ь главьнъ съмыслъ ищишлѥниѥ, нын дѹмаѭтъ ко ихъ главьнъ съмыслъ ѹправлѥниѥ ѥстъ.
 
-== Части ==
+== Чѧсти ==
 *[[Процессоръ]].
 *[[Клавиатура]] ради въвода.
 *[[Мониторъ]] ради показа.
