*Empty MediaWiki Message*

--- a/Ищислитєл҄ь.mw
+++ b/Ищислитєл҄ь.mw
@@ -4,7 +4,7 @@
 
 == Чѧсти ==
 *[[Процессоръ]].
-*[[Клавиатура]] ради въвода.
+*[[Клавїатура]] ради въвода.
 *[[Мониторъ]] ради показа.
 
 {{commonscat|Computer}}
