*Empty MediaWiki Message*

--- a/Спєктроумъ.mw
+++ b/Спєктроумъ.mw
@@ -5,4 +5,7 @@
 == [[Интернетъ|Интернетѣ]] ==
 *[http://worldofspectrum.org World of Spectrum]
 
+[[Category: Ищислител҄ьна технїка]]
+
 [[ru:ZX Spectrum]]
+[[en:ZX Spectrum]]
