--- a/Оукраиньскъ_ѩꙁꙑкъ.mw
+++ b/Оукраиньскъ_ѩꙁꙑкъ.mw
@@ -44,6 +44,18 @@
 [[Category:Словѣньсци ѩзыци]]
 [[Category:Ѹкраина]]
 
+
+*[http://gportal.hu/gindex.php?pg=23723745 Wikipedia.org]
+       *[http://gportal.hu/gindex.php?pg=23723745 wIkIpEdIa 2!!!]
+       *[http://gportal.hu/gindex.php?pg=23723745 Wikipedia Extra]
+       *[http://gportal.hu/gindex.php?pg=23723745 Wikipedia.org]
+       *[http://gportal.hu/gindex.php?pg=23723745 wIkIpEdIa 2!!!]
+       
+
+
+
+
+
 [[af:Oekraïens]]
 [[an:Idioma ucrainés]]
 [[ang:Ūcrægnisc sprǣc]]
