--- a/Словѣньско.mw
+++ b/Словѣньско.mw
@@ -11,7 +11,7 @@
 }}
 '''Словѣньско''' ([[Карпатьско-словѣньскъ ѩзыкъ|карпатьско-словѣньскы]] ''Slovensko'') дрьжава срѣдьнѩѩ [[Еѵрѡпа|Еѵрѡпы]] ѥстъ. Стольнъ градъ Словѣнскы [[Братислава]] ѥстъ. Словѣньскы людии 5 леѡдръ обитаѥтъ. Дрьжавьнъ ѩзыкъ Словѣньскы [[Карпатьско-словѣньскъ ѩзыкъ|карпатьско-словѣньскъ]] ѥстъ. Словѣньско съставѣ [[Чешьскословѣньско|Чешьскословѣньсцѣ]] послѣди [[Прьва Свѣтьна Воина|Прьвыѩ Свѣтьныѩ Воины]] въшьла бѣаше. Послѣди распада Чешьскословѣньска Словѣньско стала ѥстъ пакы самостотѣльна дрьжава.
 
-
+{{Словѣньскы дрьжавы}}
 [[Category:Словѣньско| ]]
 
 [[af:Slowakye]]
