*Empty MediaWiki Message*

--- a/Чєшьско.mw
+++ b/Чєшьско.mw
@@ -12,6 +12,7 @@
 
 '''Чешьско''' ({{Lang-cu|Чеси}}, слово «Чешьско» чешьскаѥго имене прѣложениѥ ѥстъ. {{Lang-cs|Česko}}) срѣдьн҄ии [[Еѵрѡпа|Еѵрѡпѣ]] дрьжава ѥстъ. Стольнъ градъ Чехъ [[Прага]] ѥстъ. Чешьско съставѣ [[Чешьскословѣньско|Чешьскословѣньсцѣ]] послѣди [[Прьва Свѣтьна Воина|Прьвыѩ Свѣтьныѩ Воины]] въшьла бѣаше. Послѣди распада Чешьскословѣньска Чешьско стала ѥсть пакы самостотѣльна дрьжава.
 
+{{Словѣньскы дрьжавы}}
 [[Category:Чешьско| ]]
 
 [[af:Tsjeggië]]
