*Empty MediaWiki Message*

--- a/Хръватьска.mw
+++ b/Хръватьска.mw
@@ -11,6 +11,7 @@
 }}
 '''Хръватьска''' или Димократї Хръватьска ([[словѣньскъ ѩзыкъ|словѣньскы]] Хръвати, слово «Хръватьска» хръватьскаѥго имене прѣложениѥ ѥстъ. [[хръватьскъ ѩзыкъ|хрьватьскы]] ''Republika Hrvatska''.) дрьжава сѣверозапада Балканъ и срѣдьнѩѩ [[Evрѡпа|Еѵрѡпы]] ѥстъ. Стольнъ градъ Хръватъ [[Загребъ]] ѥстъ. Дрьжавьнъ ѩзыкъ Хръватъ [[хръватьскъ ѩзыкъ]] ѥстъ.
 
+{{Словѣньскы дрьжавы}}
 [[Category:Хръватьска| ]]
 
 [[af:Kroasië]]
