--- a/Їллѷрїиска_Словѣнїꙗ.mw
+++ b/Їллѷрїиска_Словѣнїꙗ.mw
@@ -16,6 +16,7 @@
 
 1918 годѣ по [[Прьва Свѣтьна Воина|Прьвыѩ Свѣтьныѩ Воины]] въшьла бѣаше въ съставъ Кралѥвьства Срьбъ, Хръватъ и Словѣньць (послѣди именѹѥма [[Югослави]], по [[Вътора Свѣтьна Воина|Въторыѩ Свѣтьныѩ Воины]] же Социалистичьска  Съвѫзьна Димократї Югослави (ССДЮ) бѣаше). Послѣди распада ССДЮ Їллѷрїиска Словѣнї стала ѥстъ пакы самостотел҄ьна дрьжава. 
 
+{{Словѣньскы дрьжавы}}
 [[Category:Їллѷрїиска Словѣнї| ]]
 
 [[af:Slowenië]]
