*Empty MediaWiki Message*

--- a/Босна_и_Хєрсєговина.mw
+++ b/Босна_и_Хєрсєговина.mw
@@ -17,6 +17,7 @@
 *[[Хръватьска]]
 * [http://bosnianews.blogspot.com/ Bosnia News]
 
+{{Словѣньскы дрьжавы}}
 [[Category:Босна| ]]
 
 [[als:Bosnien und Herzegowina]]
