*Empty MediaWiki Message*

--- a/Роусь.mw
+++ b/Роусь.mw
@@ -1,4 +1,4 @@
-[[Видъ:Rus-1015-1113.png|thumb]]'''Рѹсь''' (наречена тако по своѥмѹ стольнѹ градѹ ) въсточьныѩ чѧсти [[Еѵрѡпа|Еѵрѡпы]] дрьжава бѣаше сътолѣтиихъ З—IВ, послѣди (и прѣдъ тѣмь) же разложена бѣаше вън ѹдѣльна кънѧжьства. а градъ єи стольнъ [[Кыѥвъ]] соуще :
+[[Видъ:Rus-1015-1113.png|thumb]]'''Рѹсь''' въсточьныѩ чѧсти [[Еѵрѡпа|Еѵрѡпы]] дрьжава бѣаше сътолѣтиихъ З—IВ, послѣди (и прѣдъ тѣмь) же разложена бѣаше вън ѹдѣльна кънѧжьства. а градъ єи стольнъ [[Кыѥвъ]] соуще :
 
 [[Category:Кыѥвьска Рѹсь]]
 
