Свѫзи чѧсти – Грады

--- a/Рѡсїꙗ.mw
+++ b/Рѡсїꙗ.mw
@@ -39,7 +39,9 @@
 | valign="top" |'''Димократїѩ'''
 * [[Башкортостанъ]]
 * [[Татарстанъ]]
-
+'''Грады''' <!-- Города-субъекты -->
+* [[Москъва]]
+* [[Санкт-Петербѹргъ]]
 
 |}
 
