*Empty MediaWiki Message*

--- a/Мєждоусѣтиѥ.mw
+++ b/Мєждоусѣтиѥ.mw
@@ -1,6 +1,6 @@
 '''Интернетъ''' ({{lang-en|Internet}}) ѥстъ междѹнародьна съмѣтател҄ьна сѣть.
 
-Основана ѥстъ лѣта 1969 [[США|Америцѣ]]. Начѧлѹ сѧ называаше ARPANET.
+Основана ѥстъ лѣта 1969 [[АѤД|Америцѣ]]. Начѧлѹ сѧ называаше ARPANET.
 
 [[Category:Технїка]]
 
