--- a/Москъва.mw
+++ b/Москъва.mw
@@ -14,6 +14,7 @@
 
 [[Category:Гради]]
 [[Category:Рѡсї]]
+[[Category:Мосъква|Мосъква]]
 [[Category:Стольни гради]]
 [[Category:Прѣзъсибирьскъ колѣинъ пѫть]]
 
