*Empty MediaWiki Message*

--- a/Москъва.mw
+++ b/Москъва.mw
@@ -14,7 +14,7 @@
 
 [[Category:Гради]]
 [[Category:Рѡсї]]
-[[Category:Мосъква|Мосъква]]
+[[Category:Мосъква| ]]
 [[Category:Стольни гради]]
 [[Category:Прѣзъсибирьскъ колѣинъ пѫть]]
 
