--- a/Ꙁєлєноградъ.mw
+++ b/Ꙁєлєноградъ.mw
@@ -7,7 +7,9 @@
 | Основанъ = 1958
 | Харта = [[Видъ:Msk_zelao.png|200 px]]
 |}}
-'''Зеленоградъ''' ({{Lang-ru|Зеленоград}}) [[Рѡсї|Рѡсїѩ]] градъ ѥстъ. [[Москъва|Москъвы]] чѧсть ѥсть. Людии обитаѥтъ 215 тысѭщь. Основанъ ѥстъ лѣта 1958, нареченъ градъ 1963 ѥстъ.
+'''Зеленоградъ''' ({{Lang-ru|Зеленоград}}) [[Рѡсї|Рѡсїѩ]] градъ ѥстъ. [[Москъва|Москъвы]] чѧсть ѥсть. 
+Построѥна ѥстъ рѣцѣ [[Сходнѩ_(рѣка)|Сходнѣ]].
+Людии обитаѥтъ 215 тысѭщь. Основанъ ѥстъ лѣта 1958, нареченъ градъ 1963 ѥстъ.
 
 {{commonscat|Zelenograd}} 
 [[Катигорї:Гради]]
