--- a/Ꙁєлєноградъ.mw
+++ b/Ꙁєлєноградъ.mw
@@ -8,7 +8,7 @@
 | Харта = [[Видъ:Msk_zelao.png|200 px]]
 |}}
 '''Зеленоградъ''' ({{Lang-ru|Зеленоград}}) [[Рѡсї|Рѡсїѩ]] градъ ѥстъ. [[Москъва|Москъвы]] чѧсть ѥсть. 
-Построѥна ѥстъ рѣцѣ [[Сходнѩ_(рѣка)|Сходнѣ]].
+Построѥна ѥстъ рѣцѣ [[ѹСходн҄ѩѹ_(рѣка)|Сходн҄ѣ]]. 
 Людии обитаѥтъ 215 тысѭщь. Основанъ ѥстъ лѣта 1958, нареченъ градъ 1963 ѥстъ.
 
 {{commonscat|Zelenograd}} 
