--- a/Спєктроумъ.mw
+++ b/Спєктроумъ.mw
@@ -1,4 +1,4 @@
-'''Спектрѹмъ''' ({{lang-en|ZX Spectrum}}) ѥстъ [[съмѣтател҄ь]] [[Велика Британї|англїискы]]. Съзьданъ лѣта 1982 ѥстъ. Ричардъ Алтвассеръ ({{lang-en|Richard Altwasser}}) съзьда схимѫ. Стивенъ Викерсъ ({{lang-en|Steven Vickers}}) написа [[программа|программѫ]] [[ROM]]. Фирма Sinclair Research Ltd събирааше Спектрѹмы.
+'''Спектрѹмъ''' ({{lang-en|ZX Spectrum}}) ѥстъ [[съмѣтател҄ь]] [[Велика Британї|англїискы]]. Съзижденъ лѣта 1982 ѥстъ. Ричардъ Алтвассеръ ({{lang-en|Richard Altwasser}}) съзиждихъ схимѫ. Стивенъ Викерсъ ({{lang-en|Steven Vickers}}) напьсахъ [[программа|программѫ]] [[ROM]]. Фирма Sinclair Research Ltd събирааше Спектрѹмы.
 
 Мнози рѹськы виды Спектрѹмъ сѫтъ: Пентагонъ, Скорпїонъ, Профи, АТМ Тѹрбо и дрѹзи.
 
