Неправьдьно ѹничьжениѥ словесъ исправихъ.

--- a/Роусь.mw
+++ b/Роусь.mw
@@ -1,4 +1,4 @@
-[[Видъ:Rus-1015-1113.png|thumb]]'''Рѹсь''' въсточьныѩ чѧсти [[Еѵрѡпа|Еѵрѡпы]] дрьжава бѣаше сътолѣтиихъ З—IВ, послѣди (и прѣдъ тѣмь) же разложена бѣаше вън ѹдѣльна кънѧжьства. а градъ єи стольнъ [[Кыѥвъ]] соуще :
+[[Видъ:Rus-1015-1113.png|thumb]]'''Рѹсь''' (или '''Кыѥвьска Рѹсь''', наречена тако по градѹ [[Кыѥвъ|Кыѥвѹ]]) въсточьныѩ чѧсти [[Еѵрѡпа|Еѵрѡпы]] дрьжава бѣаше сътолѣтиихъ З—IВ, послѣди (и прѣдъ тѣмь) же разложена бѣаше вън ѹдѣльна кънѧжьства, комѹжьдо свои стольни гради бѣхѫ. Великыи столъ [[Кыѥвъ|Кыѥвѣ]] бѣ.
 
 [[Category:Кыѥвьска Рѹсь]]
 
