*Empty MediaWiki Message*

--- a/Мєждоусѣтиѥ.mw
+++ b/Мєждоусѣтиѥ.mw
@@ -2,6 +2,8 @@
 
 Основана ѥстъ лѣта 1969 [[АѤД|Америцѣ]]. Начѧлѹ сѧ называаше ARPANET.
 
+== Зьри такожде ==
+{{commonscat|Internet}}
 [[Category:Технїка]]
 
 [[af:Internet]]
