*Empty MediaWiki Message*

--- a/Варшава.mw
+++ b/Варшава.mw
@@ -1,23 +1,16 @@
 {{Градъ|Имѧ = Варшава
 | знамѧ= Flag of Warsaw.svg
 | знакъ = Grand CoA Warsaw.png
-| Дрьжава = Пол̑ьска
+| Дрьжава = {{Пол̑ьскы знамѧ}}Пол̑ьска
 | Глава = 
-| Людии = 
+| Людии = 1 701 000 
 | Основанъ = 
 | Харта = [[Видъ:POL Warszawa map.svg|200 px]]
 |}}
 
-'''Варшава''' ({{Lang-pl|Warszawa}}) [[стольнъ градъ]] [[Пол̑ьска|Пол̑ьскы]] ѥстъ.
+'''Варшава''' ({{Lang-pl|Warszawa}}) [[стольнъ градъ]] [[Пол̑ьска|Пол̑ьскы]] ѥстъ. Людии обитаѥтъ 1,7 леѡдръ. Нареченъ градъ 1300 ѥстъ.
 
-<!--
-<gallery>
-Image:Syrenka 03.jpg|
-Image:WarsawCenter.jpg|
-Image:Wawka.jpg|
-</gallery>
-{{commons|Warszawa}}
--->
+{{commonscat|Warszawa}}
 
 [[Category:Гради]]
 [[Category:Пол̑ьска]]
