--- a/Варшава.mw
+++ b/Варшава.mw
@@ -8,7 +8,7 @@
 | Харта = [[Видъ:POL Warszawa map.svg|200 px]]
 |}}
 
-'''Варшава''' ({{Lang-pl|Warszawa}}) [[стольнъ градъ]] [[Пол̑ьска|Пол̑ьскы]] ѥстъ. Людии обитаѥтъ 1,7 леѡдръ. Нареченъ градъ 1300 ѥстъ.
+'''Варшава''' ({{Lang-pl|Warszawa}}) [[стольнъ градъ]] [[Пол̑ьска|Пол̑ьскы]] ѥстъ. Людии обитаѥтъ 1,7 леѡдръ. Нареченъ градъ лѣта 1300 ѥстъ.
 
 {{commonscat|Warszawa}}
 
