*Empty MediaWiki Message*

--- a/Гъданьскъ.mw
+++ b/Гъданьскъ.mw
@@ -1,13 +1,14 @@
 {{Градъ|Имѧ = Гъданьскъ
 | знамѧ= Gdansk flag.svg
 | знакъ = POL Gdańsk COA.svg
-| Дрьжава = Пол̑ьска
+| Дрьжава = {{Пол̑ьскы знамѧ}}Пол̑ьска
 | Глава = 
-| Людии = 
+| Людии = 458,053
 | Основанъ = 
 | Харта = [[Видъ:POL Gdańsk map.svg|200 px]]
 |}}
-'''Гъданьскъ''' ({{Lang-pl|Gdańsk}}) [[Пол̑ьска|Пол̑ьскы]] сѣвера [[градъ]] ѥстъ.
+'''Гъданьскъ''' ({{Lang-pl|Gdańsk}}) [[Пол̑ьска|Пол̑ьскы]] сѣвера [[градъ]] ѥстъ. Людии обитаѥтъ 458 тысѫщь. Нареченъ градъ лѣта 1263 ѥстъ.
+
 
 <gallery>
 image:Gdańsk Ratusz Głównego Miasta.jpg 
@@ -21,6 +22,9 @@ image:Pomnik Sobieskiego w Gdansku.jpg
 image:Dwór artusa.jpg 
 </gallery>
 
+== Зьри такожде ==
+
+{{Commonscat|Gdańsk}}
 [[Category:Гради]]
 [[Category:Пол̑ьска]]
 
