*Empty MediaWiki Message*

--- a/Коуровъ.mw
+++ b/Коуровъ.mw
@@ -1,15 +1,16 @@
 {{Градъ|Имѧ = Кѹровъ
 | знамѧ= 
 | знакъ = POL Kurów COA.svg
-| Дрьжава = Пол̑ьска
+| Дрьжава = {{Пол̑ьскы знамѧ}}Пол̑ьска
 | Глава = 
 | Людии = 2782
 | Основанъ = 
 | Харта = [[Image:KurówPoland.png|200 px|]]
 |}}
 
-'''Кѹровъ''' ({{Lang-pl|Kurów}}) - село [[Пол̑ьска|Пол̑ьскы]]. Въ Кѹровѣ людии обитаѥтъ 2 782.
+'''Кѹровъ''' ({{Lang-pl|Kurów}}) ѥстъ село [[Пол̑ьска|Пол̑ьскы]]. Кѹровѣ людии обитаѥтъ 2 782.
 
+{{commonscat|Kurów}}
 [[Category:Пол̑ьска]]
 
 [[af:Kurów]]
