*Empty MediaWiki Message*

--- a/Подълѣсьскъ_Мєждоурѣчь.mw
+++ b/Подълѣсьскъ_Мєждоурѣчь.mw
@@ -1,13 +1,13 @@
 {{Градъ|Имѧ = Подълѣсьскъ Мѧѕирьць
 | знамѧ= POL Międzyrzec Podlaski flaga.svg
 | знакъ = POL Międzyrzec Podlaski COA.svg
-| Дрьжава = Пол̑ьска
+| Дрьжава = {{Пол̑ьскы знамѧ}}Пол̑ьска
 | Глава = 
 | Людии = 17 300
 | Основанъ = 
 | Харта = [[Видъ:PL Międzyrzec Podlaski map.svg|200 px]]
 }}
-'''Подълѣсьскъ Мѧѕирьць''' ({{lang-pl|Międzyrzec Podlaski}}) [[Пол̑ьска|Пол̑ьскы]] въстока [[градъ]] ѥстъ.
+'''Подълѣсьскъ Мѧѕирьць''' ({{lang-pl|Międzyrzec Podlaski}}) [[Пол̑ьска|Пол̑ьскы]] въстока [[градъ]] ѥстъ. Людии обитаѥтъ 17 тысѫщь.
 
 [[Category:Гради]]
 [[Category:Пол̑ьска]]
