*Empty MediaWiki Message*

--- a/Софїꙗ.mw
+++ b/Софїꙗ.mw
@@ -1,14 +1,15 @@
 {{Градъ|Имѧ = Софї
 | знамѧ= BG Sofia flag.svg
 | знакъ = BG Sofia coa.svg
-| Дрьжава = Блъгарї
+| Дрьжава = {{Блъгарїѩ знамѧ}}Блъгарї
 | Глава = 
-| Людии = 
+| Людии = 1,270,450
 | Основанъ = 
-| Харта = 
+| Харта = [[Видъ:Sofia, Bulgaria.JPG|200px]]
 |}}
-'''Со́фї''' ([[блъгарьскъ ѩзыкъ|блъгарьскы]] "София") стольнъ градъ [[Блъгарї|Блъгарїѩ]] ѥсть.
+'''Со́фї''' ({{lang-bg|София}}) стольнъ градъ [[Блъгарї|Блъгарїѩ]] ѥсть. Людии обитаѥтъ 1,270,450.
 
+{{commonscat|Sofia}}
 [[Category:Гради]]
 [[Катигорї:Блъгарї]]
 [[Category:Стольни гради]]
