*Empty MediaWiki Message*

--- a/Асєнѥвъ_Градъ.mw
+++ b/Асєнѥвъ_Градъ.mw
@@ -1,7 +1,7 @@
 {{Градъ|Имѧ = Асенѥвъ Градъ
 | знамѧ= 
 | знакъ = Asenovgrad-coat-of-arms.svg
-| Дрьжава = Блъгарї
+| Дрьжава = {{Блъгарїѩ знамѧ}}Блъгарї
 | Глава = 
 | Людии = 56 тысѫщь
 | Основанъ = ~3 тысѫщи лѣтъ до ХР
