--- a/Фїлїппополь.mw
+++ b/Фїлїппополь.mw
@@ -1,7 +1,7 @@
 {{Градъ|Имѧ = Плъпъдевъ
 | знамѧ= 
 | знакъ = Plovdiv-coat-of-arms.svg
-| Дрьжава = Блъгарї
+| Дрьжава = {{Блъгарїѩ знамѧ}}Блъгарї
 | Глава = Иванъ Чомаковъ
 | Людии = 376 тысѫщь
 | Основанъ = 
