*Empty MediaWiki Message*

--- a/Пѷргъ.mw
+++ b/Пѷргъ.mw
@@ -1,7 +1,7 @@
 {{Градъ|Имѧ = Пѷргъ
 | знамѧ= 
 | знакъ = Burgas-coat-of-arms.svg
-| Дрьжава = Блъгарї
+| Дрьжава = {{Блъгарїѩ знамѧ}}Блъгарї
 | Глава = Иоанъ Костадиновъ
 | Людии = 305 тысѫщь
 | Основанъ = 
