*Empty MediaWiki Message*

--- a/Стара_Ꙁагора.mw
+++ b/Стара_Ꙁагора.mw
@@ -1,7 +1,7 @@
 {{Градъ|Имѧ = Стара Загора
-| знамѧ= STZflag.gif
+| знамѧ= 
 | знакъ = Stara-Zagora-coat-of-arms.svg
-| Дрьжава = Блъгарї
+| Дрьжава = {{Блъгарїѩ знамѧ}}Блъгарї
 | Глава = Еѵгенїи Желевъ
 | Людии = 160 тысѫщь
 | Основанъ = ~6 тысѫщь лѣта до РХ
