*Empty MediaWiki Message*

--- a/Монтана_·_Блъгарїи.mw
+++ b/Монтана_·_Блъгарїи.mw
@@ -1,7 +1,7 @@
 {{Градъ|Имѧ = Монтана
 | знамѧ= 
 | знакъ = 
-| Дрьжава = Блъгарї
+| Дрьжава = {{Блъгарїѩ знамѧ}}Блъгарї
 | Глава = Златъко Живъковъ
 | Людии = 50 тысѫщь
  | Основанъ = 
