*Empty MediaWiki Message*

--- a/Сараѥво.mw
+++ b/Сараѥво.mw
@@ -1,7 +1,7 @@
 {{Градъ|Имѧ = Сараѥво
 | знамѧ= SarajevoFlag.gif
 | знакъ = Herbik.svg
-| Дрьжава = Босна
+| Дрьжава = {{Босны знамѧ}}Босна
 | Глава = 
 | Людии =  802 тысѧщи
 | Основанъ = 
