*Empty MediaWiki Message*

--- a/Подъгорица.mw
+++ b/Подъгорица.mw
@@ -1,7 +1,7 @@
 {{Градъ|Имѧ = Подъгорица
 | знамѧ= Flag of Podgorica.svg
 | знакъ = NewCoatPG1.jpg
-| Дрьжава = Чрьна Гора
+| Дрьжава = {{Чрьныѩ Горы знамѧ}}Чрьна Гора
 | Глава = 
 | Людии = 169132
 | Основанъ = 
@@ -9,6 +9,7 @@
 |}}
 '''Подъгорица''' ([[Срьбьскъ ѩзыкъ|срьбьски]] ''Подгорица/Podgorica'') [[Чрьна Гора|Чрны Горы]] стольнъ градъ ѥсть. Построѥна рѣцѣ [[Морача|Морачи]] ѥсть. Людии обитаѥтъ 169 132. Сѥго града имени Рыбьница и Тїтоградъ бѣашете. Подъгорица стала ѥстъ пакы стольнъ градъ послѣди їѹнї 2006 годѣ, стольнъ градъ Чрьны Горы [[Цетиниѥ]] бѣаше.
 
+{{Commonscat|Podgorica}}
 [[Category:Гради]]
 
 [[am:ፖድጎሪጻ]]
