*Empty MediaWiki Message*

--- a/Цєтиниѥ.mw
+++ b/Цєтиниѥ.mw
@@ -1,7 +1,7 @@
 {{Градъ|Имѧ = Цетиниѥ
 | знамѧ=
 | знакъ = 
-| Дрьжава = Чрьна Гора
+| Дрьжава = {{Чрьныѩ Горы знамѧ}}Чрьна Гора
 | Глава = 
 | Людии = 15 тысѧщь
 | Основанъ = 1482
@@ -13,7 +13,7 @@
 Image:AX_Cetinje_Zetski_Dom-20060818.jpg|Ѳеатро "Зетьскъ домъ"
 Image:Cipur_Church.jpg|Сипурьска съборьна црькы
 </gallery>
-
+{{Commonscat|Cetinje, Montenegro}}
 [[Катигорї:Чрьна Гора]]
 [[Category:Стольни гради]]
 
