--- a/Сараѥво.mw
+++ b/Сараѥво.mw
@@ -7,7 +7,7 @@
 | Основанъ = 
 | Харта =[[Видъ:Location Sarajevo.png|200 px]]
 |}}
-'''Сараѥво''' ([[босньскъ ѩзыкъ|босньскы]] ''Sarajevo'') стольнъ градъ [[Босна|Босны]] ѥсть, ѥѩ наибол҄ии градъ ѥсть. Основанъ лѣта 1263 ѥстъ. Града имена Врьхъ Босна (''Босноваръ''), Босна-Сараи, Сараи-Ова бѣахѫ. Сараѥвѣ людии 802 тысѧщи обитаѥтъ.
+'''Сараѥво''' ([[босньскъ ѩзыкъ|босньскы]] и [[хръватьскъ ѩзыкъ|хръватьскы]] ''Sarajevo'', [[срьбьскъ ѩзыкъ|срьбьскы]] ''Сарајево'') [[Босна|Босны]] стольнъ и наибол҄ии градъ ѥсть. Основанъ лѣта 1263 ѥстъ. Града имена Врьхъ Босна (''Босноваръ''), Босна-Сараи, Сараи-Ова бѣахѫ. Сараѥвѣ людии 802 тысѧщи обитаѥтъ.
 
 [[Category:Стольни гради]]
 [[Катигорї:Босна]]
