--- a/Цєтиниѥ.mw
+++ b/Цєтиниѥ.mw
@@ -10,7 +10,7 @@
 '''Цетиниѥ''' ([[Срьбьскъ ѩзыкъ|срьбскы]] ''Цетиње/Cetinje'') [[Чрьна Гора|Чрьны Горы]] древльн҄ь стольнъ градъ  ѥстъ. Людии обитаѥтъ 15 тысѧщь. Построѥнъ ѥстъ ѹ горы срьбьскы нарицаѥмы ''Ловћен'' лѣта 1482.
 
 <gallery>
-Image:AX_Cetinje_Zetski_Dom-20060818.jpg|Ѳеатро "Зетьскъ домъ"
+Image:AX_Cetinje_Zetski_Dom-20060818.jpg|Ѳеатро «Зетьскъ домъ»
 Image:Cipur_Church.jpg|Сипурьска съборьна црькы
 </gallery>
 {{Commonscat|Cetinje, Montenegro}}
