Блазны исправихъ. Статї ѕѣло словѣньска. :D

--- a/Спєктроумъ.mw
+++ b/Спєктроумъ.mw
@@ -1,6 +1,6 @@
-'''Спектрѹмъ''' ({{lang-en|ZX Spectrum}}) ѥстъ [[съмѣтател҄ь]] [[Велика Британї|англїискы]]. Съзижденъ лѣта 1982 ѥстъ. Ричардъ Алтвассеръ ({{lang-en|Richard Altwasser}}) съзиждихъ схимѫ. Стивенъ Викерсъ ({{lang-en|Steven Vickers}}) напьсахъ [[программа|программѫ]] [[ROM]]. Фирма Sinclair Research Ltd събирааше Спектрѹмы.
+'''Спектрѹмъ''' ({{lang-en|ZX Spectrum}}) [[Велика Британї|англїискы]] [[съмѣтател҄ь]] ѥстъ. Сътворѥнъ лѣта 1982 ѥстъ. Ричардъ Алтвассеръ ({{lang-en|Richard Altwasser}}) сътворихъ схимѫ, а Стивенъ Викерсъ ({{lang-en|Steven Vickers}}) [[программа|программѫ]] [[ROM]] напьсахъ. Фирма Sinclair Research Ltd Спектрѹмы дѣлааше.
 
-Мнози рѹськы виды Спектрѹмъ сѫтъ: Пентагонъ, Скорпїонъ, Профи, АТМ Тѹрбо и дрѹзи.
+Спектрѹма мънози съвѣтьсти образи сѫтъ: Пентагонъ, Скорпионъ, Профи, АТМ Тѹрбо ид҃р.
 
 == [[Интернетъ|Интернетѣ]] ==
 *[http://worldofspectrum.org World of Spectrum]
