Града имѧ исправихъ.

--- a/Фїлїппополь.mw
+++ b/Фїлїппополь.mw
@@ -1,4 +1,4 @@
-{{Градъ|Имѧ = Плъпъдевъ
+{{Градъ|Имѧ = Фїлїппополь
 | знамѧ= 
 | знакъ = Plovdiv-coat-of-arms.svg
 | Дрьжава = {{Блъгарїѩ знамѧ}}Блъгарї
