--- a/Спєктроумъ.mw
+++ b/Спєктроумъ.mw
@@ -1,8 +1,10 @@
+[[Видъ:ZXSpectrum48k.jpg|thumb|Спектрѹмъ|left]]
 '''Спектрѹмъ''' ({{lang-en|ZX Spectrum}}) [[Велика Британї|англїискы]] [[съмѣтател҄ь]] ѥстъ. Сътворѥнъ лѣта 1982 ѥстъ. Ричардъ Алтвассеръ ({{lang-en|Richard Altwasser}}) сътворихъ схимѫ, а Стивенъ Викерсъ ({{lang-en|Steven Vickers}}) [[программа|программѫ]] [[ROM]] напьсахъ. Фирма Sinclair Research Ltd Спектрѹмы дѣлааше.
 
 Спектрѹма мънози съвѣтьсти образи сѫтъ: Пентагонъ, Скорпионъ, Профи, АТМ Тѹрбо ид҃р.
 
 == [[Интернетъ|Интернетѣ]] ==
+{{commonscat|Sinclair ZX Spectrum}}
 *[http://worldofspectrum.org World of Spectrum]
 
 [[Category: Ищислител҄ьна технїка]]
