--- a/Кириши.mw
+++ b/Кириши.mw
@@ -12,3 +12,9 @@
 [[Катигорї:Гради]]
 [[Катигорї:Лениноградьска область]]
 [[ru:Кириши]]
+[[en:Kirishi]]
+[[eo:Kiriŝi]]
+[[et:Kiriši]]
+[[nl:Kirisji]]
+[[pt:Kirishi]]
+[[ro:Kirishi]]
