--- a/Бѣлъ_Градъ_·_Срьбїи.mw
+++ b/Бѣлъ_Градъ_·_Срьбїи.mw
@@ -1,15 +1,16 @@
 {{Градъ|Имѧ = Бѣлъ Градъ
 | знамѧ= Flag of Belgrade.png
 | знакъ = Small Coat of Arms Belgrade.svg
-| Дрьжава = Срьбї
+| Дрьжава = {{Срьбїѩ знамѧ}}Срьбї
 | Глава = 
 | Людии =  1 795 124 
 | Основанъ =Г  вѣкъ до РХ
-| Харта =
+| Харта = [[Видъ:Serbia Belgrade.png|200px]]
 }}
 {{Дрѹѕи съмысли|Бѣлъ Градъ}}
-'''Бѣлъ Градъ''' или '''Бѣлоградъ''' ([[Срьбьскъ ѩзыкъ|срьбьскы]]: ''Београд'') [[Срьбї|Срьбїѩ]] [[стольнъ градъ]]  ѥстъ.
+'''Бѣлъ Градъ''' или '''Бѣлоградъ''' ([[Срьбьскъ ѩзыкъ|срьбьскы]]: ''Београд'') [[Срьбї|Срьбїѩ]] [[стольнъ градъ]]  ѥстъ. Людии обитаѥтъ 1,8 леѡдръ.
 
+{{Commonscat|Belgrade}}
 [[Category:Гради]]
 [[Category:Срьбї]]
 [[Category:Стольни гради]]
