*Empty MediaWiki Message*

--- a/Оужицє.mw
+++ b/Оужицє.mw
@@ -1,8 +1,8 @@
 {{Градъ|Имѧ = Ѹжице
 | знамѧ = 
 | знакъ = Uzice.jpg
-| Дрьжава = Срьбїıа
-| Глава = Тихомир Петковић
+| Дрьжава = {{Срьбїѩ знамѧ}}Срьбїıа
+| Глава = Тихомир Петковищь
 | Людии = 54,717
 | Основанъ = ?
 | Харта = [[Видъ:Serbia Užice.png|200 px]]
