*Empty MediaWiki Message*

--- a/Крагоуѥвьць.mw
+++ b/Крагоуѥвьць.mw
@@ -1,3 +1,13 @@
-'''Крагѹѥвьць''' ѥстъ градъ [[Срьбї|Срьбїѩ]]. 
+{{Градъ|Имѧ = Крагѹѥвьць
+| знамѧ= 
+| знакъ = 
+| Дрьжава = {{Срьбїѩ знамѧ}}Срьбї
+| Глава = 
+| Людии =   193390
+| Основанъ =1476
+| Харта = 
+}}
+'''Крагѹѥвьць''' ({{lang-sr|Крагујевац}}) ѥстъ градъ [[Срьбї|Срьбїѩ]]. Людии обитаѥтъ 193 тысѫщи.
 [[Category:Гради]]
 [[Катигорї:Срьбї]]
+[[ru:Крагуевац]]
