--- a/Подъгорица.mw
+++ b/Подъгорица.mw
@@ -7,7 +7,7 @@
 | Основанъ = 
 | Харта = [[Видъ:Podgorica-Position.PNG|200 px]]
 |}}
-'''Подъгорица''' ([[Срьбьскъ ѩзыкъ|срьбьски]] ''Подгорица/Podgorica'') [[Чрьна Гора|Чрны Горы]] стольнъ градъ ѥсть. Построѥна рѣцѣ [[Морача|Морачи]] ѥсть. Людии обитаѥтъ 169 132. Сѥго града имени Рыбьница и Тїтоградъ бѣашете. Подъгорица стала ѥстъ пакы стольнъ градъ послѣди їѹнї 2006 годѣ, стольнъ градъ Чрьны Горы [[Цетиниѥ]] бѣаше.
+'''Подъгорица''' ({{Lang-sr|Подгорица/Podgorica}}) [[Чрьна Гора|Чрны Горы]] стольнъ градъ ѥсть. Построѥна рѣцѣ [[Морача|Морачи]] ѥсть. Людии обитаѥтъ 169 132. Сѥго града имени Рыбьница и Тїтоградъ бѣашете. Подъгорица стала ѥстъ пакы стольнъ градъ послѣди їѹнї 2006 годѣ, стольнъ градъ Чрьны Горы [[Цетиниѥ]] бѣаше.
 
 {{Commonscat|Podgorica}}
 [[Category:Гради]]
