*Empty MediaWiki Message*

--- a/Чрьна_Гора.mw
+++ b/Чрьна_Гора.mw
@@ -9,7 +9,7 @@
 | Людии = 684 тысѧщи 
 | Почѧта = 2006
 }}
-'''Чрьна Гора''' или '''Чрьногориѥ''' ([[срьбьскъ ѩзыкъ|срьбьскы]] ''Црна Гора''; невѣрьнѣ зываѥма иногда словѣньскы «Чрьногори» по образѹ дрѹгъ дрьжавъ именъ) дрьжава [[Балкани|Балканъ]] ѥстъ. Чрьныѩ Горы стольнъ градъ [[Подъгорица]] ѥстъ. Чрьны Горы людии 684 тысѧщи обитаѥтъ.
+'''Чрьна Гора''' или '''Чрьногориѥ''' ({{Lang-sr|Црна Гора}}; невѣрьнѣ зываѥма иногда словѣньскы «Чрьногори» по образѹ дрѹгъ дрьжавъ именъ) дрьжава [[Балкани|Балканъ]] ѥстъ. Чрьныѩ Горы стольнъ градъ [[Подъгорица]] ѥстъ. Чрьны Горы людии 684 тысѧщи обитаѥтъ.
 
 == Їсторї ==
 
