*Empty MediaWiki Message*

--- a/Срьбїꙗ.mw
+++ b/Срьбїꙗ.mw
@@ -9,7 +9,7 @@
 | Людии = 10 леѡдръ
 | Почѧта = 2006
 }}
-'''Срьбї''' ([[срьбьскъ ѩзыкъ|срьбьскы]]: ''Србија'' или ''Srbija'') ѥстъ страна и [[дрьжава]] срѣдьн̑ии [[Балкани|Балканъ]]. Стольнъ градъ ѥстъ [[Бѣлъ Градъ (Срьбїи)|Бѣлъ Градъ]]. Дрьжавьнъ ѩзыкъ Срьбїѩ [[срьбьскъ ѩзыкъ|срьбьскъ]] ѥстъ. Срьбїи людии 10 леѡдръ обитаѥтъ.
+'''Срьбї''' ({{Lang-sr|Србија или Srbija}}) ѥстъ страна и [[дрьжава]] срѣдьн̑ии [[Балкани|Балканъ]]. Стольнъ градъ ѥстъ [[Бѣлъ Градъ (Срьбїи)|Бѣлъ Градъ]]. Дрьжавьнъ ѩзыкъ Срьбїѩ [[срьбьскъ ѩзыкъ|срьбьскъ]] ѥстъ. Срьбїи людии 10 леѡдръ обитаѥтъ.
 
 == Їсторї ==
 
