*Empty MediaWiki Message*

--- a/Бѣлъ_Градъ_·_Срьбїи.mw
+++ b/Бѣлъ_Градъ_·_Срьбїи.mw
@@ -8,7 +8,7 @@
 | Харта = [[Видъ:Serbia Belgrade.png|200px]]
 }}
 {{Дрѹѕи съмысли|Бѣлъ Градъ}}
-'''Бѣлъ Градъ''' или '''Бѣлоградъ''' ([[Срьбьскъ ѩзыкъ|срьбьскы]]: ''Београд'') [[Срьбї|Срьбїѩ]] [[стольнъ градъ]]  ѥстъ. Людии обитаѥтъ 1,8 леѡдръ.
+'''Бѣлъ Градъ''' или '''Бѣлоградъ''' ({{Lang-sr|Београд}}) [[Срьбї|Срьбїѩ]] [[стольнъ градъ]]  ѥстъ. Людии обитаѥтъ 1,8 леѡдръ.
 
 {{Commonscat|Belgrade}}
 [[Category:Гради]]
