robot  Adding: [[nl:Abydos (Egypte)]]

--- a/Авѷдъ.mw
+++ b/Авѷдъ.mw
@@ -14,6 +14,7 @@
 [[he:אבידוס (מצרים)]]
 [[it:Abydos (Egitto)]]
 [[lt:Abydosas]]
+[[nl:Abydos (Egypte)]]
 [[oc:Abidòs]]
 [[pl:Abydos]]
 [[pt:Abido]]
