*Empty MediaWiki Message*

--- a/Цєтиниѥ.mw
+++ b/Цєтиниѥ.mw
@@ -7,7 +7,7 @@
 | Основанъ = 1482
 | Харта = [[Видъ:Cetinje-Position.PNG|200 px]]
 |}}
-'''Цетиниѥ''' ({{Lang-sr|Цетиње/Cetinje}}) [[Чрьна Гора|Чрьны Горы]] древльн҄ь стольнъ градъ  ѥстъ. Людии обитаѥтъ 15 тысѧщь. Построѥнъ ѥстъ ѹ горы срьбьскы нарицаѥмы ''Ловћен'' лѣта 1482.
+'''Цетиниѥ''' ({{Lang-sr|Цетиње/Cetinje}}) [[Чрьна Гора|Чрьны Горы]] древльн҄ь стольнъ градъ  ѥстъ. Людии обитаѥтъ 15 тысѧщь. Построѥнъ ѥстъ ѹ горы Ловщѥнъ ({{lang-sr|Ловћен}}) лѣта 1482.
 
 <gallery>
 Image:AX_Cetinje_Zetski_Dom-20060818.jpg|Ѳеатро «Зетьскъ домъ»
