--- a/Оужицє.mw
+++ b/Оужицє.mw
@@ -2,7 +2,7 @@
 | знамѧ = 
 | знакъ = Uzice.jpg
 | Дрьжава = {{Срьбїѩ знамѧ}}Срьбїıа
-| Глава = Тихомир Петковищь
+| Глава = Тихомиръ Петковищь
 | Людии = 54,717
 | Основанъ = ?
 | Харта = [[Видъ:Serbia Užice.png|200 px]]
