--- a/Фїлїппополь.mw
+++ b/Фїлїппополь.mw
@@ -7,7 +7,7 @@
 | Основанъ = 
 | Харта = [[Видъ:Plovdiv location in Bulgaria.png]]
 }}
-'''Фїлїппо́поль''' ({{lang-bg|Пловдив}}, прѣжде и ''Плъвдивъ'', ''Плъдинъ''. {{lang-el|Φιλιππούπολη}}. [[ѳракїискъ ѩзыкъ|ѳракїискы]] Pulpudeva). [[Блъгарї|Блъгарїѩ]] [[Фїллїпопольска область|Фїлїппопольскы области]] главьнъ градъ ѥстъ. Людии обитаѥтъ 376 тысѫщь.
+'''Фїлїппо́поль''' или '''Плъвдивъ''' ({{lang-bg|Пловдив}}, прѣжде и ''Плъвдивъ'', ''Плъдинъ''. {{lang-el|Φιλιππούπολη}}. [[ѳракїискъ ѩзыкъ|ѳракїискы]] Pulpudeva). [[Блъгарї|Блъгарїѩ]] [[Фїллїпопольска область|Фїлїппопольскы области]] главьнъ градъ ѥстъ. Людии обитаѥтъ 376 тысѫщь.
 {{commonscat|Plovdiv}}
 [[Category:Блъгарї]]
 [[ru:Пловдив]]
