*Empty MediaWiki Message*

--- a/Нишь.mw
+++ b/Нишь.mw
@@ -1,3 +1,44 @@
-'''Нишь''' ѥстъ градъ [[Срьбї|Срьбїѩ]]. 
+{{Градъ|Имѧ = Нишь
+| знамѧ = 
+| знакъ = 
+| Дрьжава = {{Срьбїѩ знамѧ}}Срьбїıа
+| Глава = 
+| Людии = 250 тысѫщь
+| Основанъ =
+| Харта = [[Видъ:Serbia Niš.png|200px]]
+|}}
+'''Нишь''' ({{lang-sr|Ниш/Niš}}) ѥстъ градъ [[Срьбї|Срьбїѩ]]. Людии обитаѥтъ 250 тысѫщь
+
+{{commonscat|Niš}}
 [[Category:Гради]]
 [[Катигорї:Срьбї]]
+
+[[ast:Nix]]
+[[bg:Ниш]]
+[[bs:Niš]]
+[[ca:Niš]]
+[[da:Niš]]
+[[de:Niš]]
+[[el:Ναϊσσός]]
+[[en:Niš]]
+[[eo:Niŝo]]
+[[es:Niš]]
+[[fi:Niš]]
+[[fr:Niš]]
+[[hr:Niš]]
+[[hu:Niš]]
+[[it:Niš]]
+[[ja:ニシュ]]
+[[lt:Nišas]]
+[[lv:Niša (pilsēta)]]
+[[nl:Niš]]
+[[no:Niš]]
+[[pl:Nisz]]
+[[pt:Nish]]
+[[sh:Niš]]
+[[sk:Niš]]
+[[sr:Ниш]]
+[[sv:Niš]]
+[[tr:Niş]]
+[[vo:Niš]]
+[[zh:尼什]]
