--- a/Кириши.mw
+++ b/Кириши.mw
@@ -7,7 +7,7 @@
 | Основанъ = 1693
 | map = 
 |}}
-'''Кириши''' ([[Рѹсьскъ ѩзыкъ|рѹсьскы]] ''Кириши'') градъ [[Рѡсї|Рѡсїѩ]] [[Лениноградьска область|Лениноградьскы области]] ѥстъ. Построѥнъ рѣцѣ [[Волховъ (рѣка)|Волховъ]] ѥстъ, людии обитаѥтъ 55 тысѫщь. Основанъ ѥстъ лѣта 1693, ѹничьженъ бѣ по [[Вътора Свѣтьна Воина|Въторыѩ Свѣтьныѩ Воины]]. Послѣди сънова сътворенъ бѣ и нареченъ градъ лѣта 1965.
+'''Кириши''' ([[Рѹсьскъ ѩзыкъ|рѹсьскы]] ''Кириши'') градъ [[Рѡсї|Рѡсїѩ]] [[Киришьска чѧсть|Киришьскы чѧсти]] [[Лениноградьска область|Лениноградьскы области]] ѥстъ. Построѥнъ рѣцѣ [[Волховъ (рѣка)|Волховъ]] ѥстъ, людии обитаѥтъ 55 тысѫщь. Основанъ ѥстъ лѣта 1693, ѹничьженъ бѣ по [[Вътора Свѣтьна Воина|Въторыѩ Свѣтьныѩ Воины]]. Послѣди сънова сътворенъ бѣ и нареченъ градъ лѣта 1965.
 
 [[Катигорї:Гради]]
 [[Катигорї:Лениноградьска область]]
