*Empty MediaWiki Message*

--- a/Їєроусалимъ.mw
+++ b/Їєроусалимъ.mw
@@ -1,5 +1,10 @@
 '''Їєрѹсалимъ''' ѥстъ градъ [[Їзраель]].
 
+== Links ==
+
+'''Туризм'''
+*[http://www.travexpert.net/jerusalem/ Їєрѹсалимъ (ТравЕксперт)]
+
 [[Category:Гради]]
 [[Катигорї:Їздраил̑ь]]
 
