*Empty MediaWiki Message*

--- a/Волховъ_·_градъ.mw
+++ b/Волховъ_·_градъ.mw
@@ -8,4 +8,4 @@
 | map = 
 |}}
 
-'''Волховъ''' {{lang-ru|Волхов}} [[Рѡсї|Рѡсїѩ]] [[Лениноградьска область|Лениноградьскы области]] [[Волховьска чѧсть|Волховьскы чѧсти]] главьнъ градъ ѥстъ. Основанъ ѥстъ лѣта 1918, нареченъ градъ лѣта 1933 ѥстъ. Имѧ Волхова до лѣта 1933 Званъка, а о лѣта 1933 до лѣта 1940 Волховъстрои бѣаше. Людии обитаѥтъ 46 тысѫщь.
+'''Волховъ''' ({{lang-ru|Волхов}}) [[Рѡсї|Рѡсїѩ]] [[Лениноградьска область|Лениноградьскы области]] [[Волховьска чѧсть|Волховьскы чѧсти]] главьнъ градъ ѥстъ. Основанъ ѥстъ лѣта 1918, нареченъ градъ лѣта 1933 ѥстъ. Имѧ Волхова до лѣта 1933 Званъка, а о лѣта 1933 до лѣта 1940 Волховъстрои бѣаше. Людии обитаѥтъ 46 тысѫщь.
