*Empty MediaWiki Message*

--- a/Волховъ.mw
+++ b/Волховъ.mw
@@ -1,1 +1,3 @@
-#REDIRECT [[Волховъ (градъ)]]
+{{Мъногосъмыслиѥ}}
+* '''[[Волховъ (градъ)|Волховъ]]''' - Рѡсїѩ Лениноградьскы области Волховьскы чѧсти главьнъ градъ ѥстъ
+* '''[[Волховъ (рѣка)|Волховъ]]''' - Рѡсїѩ рѣка ѥстъ
