*Empty MediaWiki Message*

--- a/Волховъ.mw
+++ b/Волховъ.mw
@@ -1,3 +1,4 @@
 {{Мъногосъмыслиѥ}}
 * '''[[Волховъ (градъ)|Волховъ]]''' - Рѡсїѩ Лениноградьскы области Волховьскы чѧсти главьнъ градъ ѥстъ
 * '''[[Волховъ (рѣка)|Волховъ]]''' - Рѡсїѩ рѣка ѥстъ
+[[ru:Волхов (значения)]]
