/* Лениноградьскыѩ области наибол҄ьше гради */

--- a/Лєниноградьска_область.mw
+++ b/Лєниноградьска_область.mw
@@ -9,7 +9,7 @@
 * [[Тихвинъ]]
 * [[Кириши]]
 * [[Кингисѥпъ]]
-* [[Волховъ]]
+* [[Волховъ (градъ)|Волховъ]]
 * [[Вьсеволожьскъ]]
 * [[Сѥртолово]]
 * [[Лѹга]]
