robot  Adding: [[mr:तारा]] Modifying: [[is:Sólstjarna]]

--- a/Ꙃвѣꙁда.mw
+++ b/Ꙃвѣꙁда.mw
@@ -40,7 +40,7 @@
 [[ia:Stella]]
 [[id:Bintang]]
 [[io:Stelo]]
-[[is:Stjarna]]
+[[is:Sólstjarna]]
 [[it:Stella]]
 [[iu:ᐅᓪᓗᕆᐊᖅ/ulluriaq]]
 [[ja:恒星]]
@@ -59,6 +59,7 @@
 [[mk:Ѕвезда]]
 [[ml:നക്ഷത്രം]]
 [[mn:Од]]
+[[mr:तारा]]
 [[ms:Bintang]]
 [[nah:Cītlalli]]
 [[nl:Ster (hemellichaam)]]
