--- a/Оукраина.mw
+++ b/Оукраина.mw
@@ -4,7 +4,7 @@
 | map = LocationUkraine.svg 
 | Стольнъ градъ = [[Кыѥвъ]]
 | Ѩзыкъ = [[Ѩзыкъ ѹкраиньскъ|ѹкраиньскъ]]
-| Глава = [[Вікторъ Ющенко]]
+| Глава = [[Викторъ Ющенко]]
 |area =
 | Людии = 46,4 леѡдръ
 | Почѧта = 1991
