*Empty MediaWiki Message*

--- a/Оукраина.mw
+++ b/Оукраина.mw
@@ -1,4 +1,4 @@
-{{Дрьжава|name = Ѹкраина
+{{Дрьжава|name = Ѹкраина<br>Україна
 | знамѧ= [[Видъ:Flag of Ukraine.svg|150px]]
 | знакъ = [[image:Coat of arms of Ukraine.svg|100px]]
 | map = LocationUkraine.svg 
@@ -9,7 +9,7 @@
 | Людии = 46,4 леѡдръ
 | Почѧта = 1991
 }}
-'''Ѹкраина''' (''Україна'') въсточьныѩ [[Еѵрѡпа|Еѵрѡпы]] дрьжава ѥстъ. Cтольнъ градъ [[Кыѥвъ]] ѥстъ. Ѹкраины дрьжавьнъ [[ѹкраиньскъ ѩзыкъ|ѹкраиньскъ]] ѩзыкъ ѥстъ. Ѹкраинѣ людии 46,4 леѡдръ обитаѥтъ.
+'''Ѹкраина''' ({{lang-uk|Україна}}) въсточьныѩ [[Еѵрѡпа|Еѵрѡпы]] дрьжава ѥстъ. Cтольнъ градъ [[Кыѥвъ]] ѥстъ. Ѹкраины дрьжавьнъ [[ѹкраиньскъ ѩзыкъ|ѹкраиньскъ]] ѩзыкъ ѥстъ. Ѹкраинѣ людии 46,4 леѡдръ обитаѥтъ.
 
 {{commonscat|Ukraine}}
 {{Словѣньскы дрьжавы}}
