*Empty MediaWiki Message*

--- a/Рѡсїꙗ.mw
+++ b/Рѡсїꙗ.mw
@@ -1,4 +1,4 @@
-{{Дрьжава|name = Рѡсїискыи Съвѫзъ 
+{{Дрьжава|name = Рѡсїискыи Съвѫзъ <br>Российская Федерация
 | знамѧ= [[Видъ:Flag of Russia.svg|150px|border|100px]]
 | знакъ = [[image:Coat of Arms of the Russian Federation.svg|80px]]
 | map = Rs-map-slovensky.png
