--- a/Самара.mw
+++ b/Самара.mw
@@ -1,15 +1,15 @@
 {{Градъ|Имѧ = Самара
 | знамѧ= Flag_of_Samara_(Samara_oblast).png
 | знакъ = Coat_of_Arms_of_Samara_(Samara_oblast).png
-| Дрьжава = {{Рѡсїѩ знамѧ}}Рѡсї
+| Дрьжава = {{Рѡсїѩ знамѧ}} Рѡсї
 | Глава = 
 | Людии = 1133 тысѫщи
 | Основанъ = 1586
 | Харта = 
 |}}
-'''Самара''' градъ [[Рѡсї|Рѡсїѩ]] ѥстъ. Самара построѥна рѣцѣ [[Вльга|Вльsе]] ѥстъ, срьдьце [[Самарьска область|Самарьскы области]] ѥстъ. Людии обитаѥтъ 1133 тысѧщи. Самара основана лѣта 1586, градъ съ лѣта 1780 ѥстъ. Имѧ Самары ''Куибышевъ'' бѣаше.
+'''Самара''' [[Рѡсї|Рѡсїѩ]] градъ, [[Самарьска область|Самарьскы области]] главьнъ градъ ѥстъ. Построѥна рѣцѣ [[Вльга|Вльsѣ]] ѥстъ. Основана лѣта 1586, градъ съ лѣта 1780 ѥстъ. Ѥтера лѣта Самары имѧ ''Кѹибышевъ'' бѣ. Людии обитаѥтъ 1133 тысѧщѧ. 
 <gallery>
-Image:Coat_of_Arms_of_Samara_(Samara_oblast)_(1780).png|Древльн҄ь знакъ Самарьскъ (1780)
+Image:Coat_of_Arms_of_Samara_(Samara_oblast)_(1780).png|Давьн҄ь Самары знакъ (1780)
 </gallery>
 == Зьри такожде ==
 {{commonscat|Samara}}
