--- a/Вльгоградъ.mw
+++ b/Вльгоградъ.mw
@@ -1,13 +1,13 @@
 {{Градъ|Имѧ = Вльгоградъ
 | знамѧ= Volgograd flag.gif
 | знакъ = Coat of Arms of Volgograd.png
-| Дрьжава = {{Рѡсїѩ знамѧ}}Рѡсї
+| Дрьжава = {{Рѡсїѩ знамѧ}} Рѡсї
 | Глава = 
 | Людии = 
 | Основанъ = 1589
 | Харта =
 |}}
-'''Вльгоградъ''' ({{Lang-ru|Волгоград}}) [[Рѡсї|Рѡсїѩ]] градъ ѥсть. Срьдьце Вльгоградьскы области ѥстъ. Назъваныи рѣкы [[Вльга|Вльгы]] именьмь ѥиже сѧ мѣстити. Рѡсїѩ наидльжаии градъ о сѣвера къ югѹ.
+'''Вльгоградъ''' ({{Lang-ru|Волгоград}}) [[Рѡсї|Рѡсїѩ]] градъ, [[Вльгоградьска область|Вльгоградьскы области]] главьнъ градъ ѥстъ. Назъваныи рѣкы [[Вльга|Вльгы]] именьмь ѥиже сѧ мѣститъ. Рѡсїѩ наидльжаии градъ о сѣвера на югъ.
 
 == Зьри такожде ==
 {{commonscat|Volgograd}}
