--- a/Вльгоградъ.mw
+++ b/Вльгоградъ.mw
@@ -7,7 +7,9 @@
 | Основанъ = 1589
 | Харта =
 |}}
-'''Вльгоградъ''' ({{Lang-ru|Волгоград}}) [[Рѡсї|Рѡсїѩ]] градъ, [[Вльгоградьска область|Вльгоградьскы области]] главьнъ градъ ѥстъ. Назъваныи рѣкы [[Вльга|Вльгы]] именьмь ѥиже сѧ мѣститъ. Рѡсїѩ наидльжаии градъ о сѣвера на югъ.
+'''Вльгоградъ''' ({{Lang-ru|Волгоград}}) [[Рѡсї|Рѡсїѩ]] градъ, [[Вльгоградьска область|Вльгоградьскы области]] главьнъ градъ ѥстъ. Основанъ ѥстъ лѣта 1589.Имѧ Вльгограда до лѣта 1925 ''Царицынъ'', а о лѣта 1925 до лѣта 1961 ''Сталиноградъ'' бѣаше. Назъваныи рѣкы [[Вльга|Вльгы]] именьмь ѥиже сѧ мѣститъ. Рѡсїѩ наидльжаии градъ о сѣвера на югъ. 
+
+Вльгоград [[градъ-ирѡи]] ѥстъ.
 
 == Зьри такожде ==
 {{commonscat|Volgograd}}
