--- a/Дємиръ_Капиꙗ.mw
+++ b/Дємиръ_Капиꙗ.mw
@@ -1,4 +1,4 @@
-'''Демиръ Капи''' ѥстъ градъ [[Македонї|Македонїѩ]]. 
+'''Демиръ Капи''' ({{Lang-mk|Демир Капија}}, [[тѷрчьскъ ѩзыкъ|тѷрчьска]] ѩзыка словесѣ «Желѣзна врата») [[Македонї|Македонїѩ]] градъ ѥстъ. 
 [[Category:Гради]]
 [[Category:Македонї]]
 
