--- a/Касторїꙗ.mw
+++ b/Касторїꙗ.mw
@@ -7,7 +7,7 @@
 | Основанъ = 
 | Харта = 
 |}}
-'''Касторї''' ({{lang-el|Καστοριά}}) градъ [[Грьци|Грькъ]] сѣверозападьнѣ чѧсти ѥстъ. Людии обитаѥтъ 16,218.
+'''Касторї''' ({{lang-el|Καστοριά}}) [[Грьци|Грьчьскъ]] сѣверозападьнѣ чѧсти градъ ѥстъ. Людии обитаѥтъ 16,218.
 
 {{commonscat|Kastoria}}
 [[Category:Гради]]
