--- a/Подълѣсьскъ_Мєждоурѣчь.mw
+++ b/Подълѣсьскъ_Мєждоурѣчь.mw
@@ -1,7 +1,7 @@
 {{Градъ|Имѧ = Подълѣсьскъ Мѧѕирьць
 | знамѧ= POL Międzyrzec Podlaski flaga.svg
 | знакъ = POL Międzyrzec Podlaski COA.svg
-| Дрьжава = {{Пол̑ьскы знамѧ}}Пол̑ьска
+| Дрьжава = Пол̑ьска {{Пол̑ьскы знамѧ}} 
 | Глава = 
 | Людии = 17 300
 | Основанъ = 
