--- a/Чєлѣбиньскъ.mw
+++ b/Чєлѣбиньскъ.mw
@@ -10,7 +10,7 @@
 '''Челѣбиньскъ''' ({{Lang-ru|Челябинск}}) [[Рѡсї|Рѡсїѩ]] [[Челѣбиньска область|Челѣбиньскы области]] главьнъ градъ ѥстъ. Основанъ лѣта 1736 и нареченъ градъ съ лѣта 1787 ѥстъ. Людіи обитаѥтъ 1093 тысѫщѧ. Построѥнъ [[Прѣзъсибирьскъ колѣинъ пѫть|Прѣзъсибирьсцѣ колѣинѣ пѫти]] ѥстъ.
 
 <gallery>
-Image:Coat of Arms of Chelyabinsk (1994).png|Челѣбиньска древльн҄ь знакъ
+Image:Coat of Arms of Chelyabinsk (1994).png|Давьн҄ь Челѣбиньска знакъ
 </gallery>
 == Зьри такожде ==
 {{commonscat|Chelyabinsk}}
