--- a/Аꙁѣрбаичанъ.mw
+++ b/Аꙁѣрбаичанъ.mw
@@ -85,6 +85,7 @@
 [[mk:Азербејџан]]
 [[ml:അസര്‍ബെയ്ജാന്‍]]
 [[mn:Азербайжан]]
+[[mr:अझरबैजान]]
 [[ms:Azerbaijan]]
 [[na:Azerbaijan]]
 [[nah:Azerbayān]]
