--- a/Чєлѣбиньскъ.mw
+++ b/Чєлѣбиньскъ.mw
@@ -1,13 +1,13 @@
-{{Гра́дъ|И́мѧ = Челѣ́биньскъ
-| зна́мѧ= Flag_of_Chelyabinsk.png
-| зна́къ = Coat_of_Arms_of_Chelyabinsk_(2000).png
-| Дрьжа́ва = {{Рѡсїѩ знамѧ}}Рѡсї
-| Глава́ = Михаил Юрѣвичъ
-| Людіи = 1093 тысѫщѧ
+{{Градъ|Имѧ = Челѣбиньскъ
+| знамѧ= Flag_of_Chelyabinsk.png
+| знакъ = Coat_of_Arms_of_Chelyabinsk_(2000).png
+| Дрьжава = {{Рѡсїѩ знамѧ}}Рѡсї
+| Глава = Михаил Юрѣвичъ
+| Людии = 1093 тысѫщѧ
 | Основанъ = 1736
 | map = 
 |}}
-'''Челѣбиньскъ''' ({{Lang-ru|Челябинск}}) [[Рѡсї|Рѡсїѩ]] [[Челѣбиньска область|Челѣбиньскы области]] главьнъ градъ ѥстъ. Основанъ лѣта 1736 и нареченъ градъ съ лѣта 1787 ѥстъ. Людіи обитаѥтъ 1093 тысѫщѧ. Построѥнъ [[Прѣзъсибирьскъ колѣинъ пѫть|Прѣзъсибирьсцѣ колѣинѣ пѫти]] ѥстъ.
+'''Челѣбиньскъ''' ({{Lang-ru|Челябинск}}) [[Рѡсї|Рѡсїѩ]] [[Челѣбиньска область|Челѣбиньскы области]] главьнъ градъ ѥстъ. Основанъ лѣта 1736 и нареченъ градъ съ лѣта 1787 ѥстъ. Людии обитаѥтъ 1093 тысѫщѧ. Построѥнъ [[Прѣзъсибирьскъ колѣинъ пѫть|Прѣзъсибирьсцѣ колѣинѣ пѫти]] ѥстъ.
 
 <gallery>
 Image:Coat of Arms of Chelyabinsk (1994).png|Давьн҄ь Челѣбиньска знакъ
