--- a/Чєлѣбиньскъ.mw
+++ b/Чєлѣбиньскъ.mw
@@ -1,8 +1,8 @@
 {{Градъ|Имѧ = Челѣбиньскъ
 | знамѧ= Flag_of_Chelyabinsk.png
 | знакъ = Coat_of_Arms_of_Chelyabinsk_(2000).png
-| Дрьжава = {{Рѡсїѩ знамѧ}}Рѡсї
-| Глава = Михаил Юрѣвичъ
+| Дрьжава = {{Рѡсїѩ знамѧ}} Рѡсї
+| Глава = Мїхаилъ Юревичь
 | Людии = 1093 тысѫщѧ
 | Основанъ = 1736
 | map = 
