--- a/Лєниноградьска_область.mw
+++ b/Лєниноградьска_область.mw
@@ -8,7 +8,7 @@
 * [[Сосньнъ Боръ]]
 * [[Тихвинъ]]
 * [[Кириши]]
-* [[Кингисѥпъ]]
+* [[Кингисеппъ]]
 * [[Волховъ (градъ)|Волховъ]]
 * [[Вьсеволожьскъ]]
 * [[Сѥртолово]]
