--- a/Мєтрополїтєнъ.mw
+++ b/Мєтрополїтєнъ.mw
@@ -1,5 +1,5 @@
 '''Метрополїтенъ''' ([[словѣньскъ ѩзыкъ|словѣньскы]] «стольноградьскъ») електрїчьныѩ тѧѕѧ подземьнъ колѣинъ пѫть ѥстъ. Наистарѣи метрополїтенъ [[Лондонъ|Лондонѣ]] ѥстъ.
-
+{{commonscat|Subway}}
 [[Category:Колѣинъ пѫти]]
 
 [[ar:مترو]]
