/* Лениноградьскыѩ области наибол҄ьше гради */ Сертолово поправихъ

--- a/Лєниноградьска_область.mw
+++ b/Лєниноградьска_область.mw
@@ -11,7 +11,7 @@
 * [[Кингисеппъ]]
 * [[Волховъ (градъ)|Волховъ]]
 * [[Вьсеволожьскъ]]
-* [[Сѥртолово]]
+* [[Сертолово]]
 * [[Лѹга]]
 
 [[Category:Лениноградьска область|*]]
