--- a/Мєждоусѣтиѥ.mw
+++ b/Мєждоусѣтиѥ.mw
@@ -1,6 +1,4 @@
-'''Интернетъ''' ({{lang-en|Internet}}) ѥстъ междѹнародьна съмѣтател҄ьна сѣть.
-
-Основана ѥстъ лѣта 1969 [[АѤД|Америцѣ]]. Начѧлѹ сѧ называаше ARPANET.
+'''Междѹсѣтиѥ''' ({{lang-en|Internet}}) междѹнародьна съмѣтательна сѣть основана лѣта 1969 [[АѤД|Америцѣ]] ѥстъ. Начѧлѣ сѧ ARPANET нарицааше.
 
 == Зьри такожде ==
 {{commonscat|Internet}}
