*Empty MediaWiki Message*

--- a/Кингисєппъ.mw
+++ b/Кингисєппъ.mw
@@ -1,6 +1,6 @@
 {{Градъ|Имѧ = Кингисеппъ
 | знамѧ=
-| знакъ = Kingisepp gerb.jpg
+| знакъ =
 | Дрьжава = {{Рѡсїѩ знамѧ}}[[Рѡсї]]
 | Глава = Викторъ Гешеле
 | Людии = 50,5 тысѫщь
@@ -8,4 +8,4 @@
 | map = 
 |}}
 
-Кингисеппъ {{lang-ru|Кингисеппъ}} [[Рѡсї|Рѡсїѩ]] [[Лениноградьска область|Лениноградьскы области]] [[Кингисеппьска чѧсть|Кингисеппьскы чѧсти]] главьнъ градъ ѥстъ. Основанъ ѥстъ лѣта 1384, нареченъ градъ съ лѣта 1784. Имѧ града до лѣта 1703 мъ, а о лѣта 1703 до лѣта 1922 амбѹргъ бѣаше. Построѥнъ ѥстъ рѣцѣ [[Лѹга (рѣка)|Лѹгѣ]]. Людии обитаѥтъ 50,5 тысѫщь.
+'''Кингисеппъ''' {{lang-ru|Кингисеппъ}} [[Рѡсї|Рѡсїѩ]] [[Лениноградьска область|Лениноградьскы области]] [[Кингисеппьска чѧсть|Кингисеппьскы чѧсти]] главьнъ градъ ѥстъ. Основанъ ѥстъ лѣта 1384, нареченъ градъ съ лѣта 1784. Имѧ града до лѣта 1703 мъ, а о лѣта 1703 до лѣта 1922 амбѹргъ бѣаше. Построѥнъ ѥстъ рѣцѣ [[Лѹга (рѣка)|Лѹгѣ]]. Людии обитаѥтъ 50,5 тысѫщь.
