*Empty MediaWiki Message*

--- a/Асїꙗ.mw
+++ b/Асїꙗ.mw
@@ -1,5 +1,5 @@
 [[Видъ:LocationAsia.png|right|thumb|200px|Асї свѣтьнѣ хартѣ]]
-'''Асї''' свѣта чѧсть ѥстъ. Людии 3981 леѡдръ обитаѥтъ. Бол҄ьши дрьжава [[Рѡсї]] ѥстъ. 
+'''Асї''' бол&#x0484;ьша свѣта чѧсть ѥстъ. Людии 3981 леѡдръ обитаѥтъ. Бол҄ьши дрьжава [[Рѡсї]] ѥстъ. 
 
 == Зьри такожде ==
 {{commonscat|Asia}}
