--- a/Рѡсїꙗ.mw
+++ b/Рѡсїꙗ.mw
@@ -28,6 +28,7 @@
 * [[Омьска область]]
 * [[Растовска область]]
 * [[Самарьска область]]
+* [[Саратовска область]]
 * [[Свердловьска область]]
 * [[Томьска область]]
 * [[Ѹлиновьска область]]
