--- a/Кингисєппъ.mw
+++ b/Кингисєппъ.mw
@@ -8,7 +8,19 @@
 | map = 
 |}}
 {{Дрѹѕи съмысли}}
-'''Кингисеппъ''' ({{lang-ru|Кингисепп}}) [[Рѡсї|Рѡсїѩ]] [[Лениноградьска область|Лениноградьскы области]] [[Кингисеппьска чѧсть|Кингисеппьскы чѧсти]] главьнъ градъ ѥстъ. Основанъ ѥстъ лѣта 1384, нареченъ градъ съ лѣта 1784. Имѧ града до лѣта 1703 мъ, а о лѣта 1703 до лѣта 1922 амбѹргъ бѣаше. Построѥнъ ѥстъ рѣцѣ [[Лѹга (рѣка)|Лѹѕѣ]]. Людии обитаѥтъ 50,5 тысѫщь.
+'''Кингисеппъ''' ({{lang-ru|Кингисепп}}) [[Рѡсї|Рѡсїѩ]] [[Лениноградьска область|Лениноградьскы области]] [[Кингисеппьска чѧсть|Кингисеппьскы чѧсти]] главьнъ градъ ѥстъ. Людии обитаѥтъ 50,5 тысѫщь.
+
+==Їсторї==
+Основанъ [[Новъ Градъ|новоградьци]] лѣта 1384 ѥстъ. Лѣтописьхъ лѣта 1395 ''градьць ма'', лѣта 1397 ''мьскъ градьць'', лѣта 1444 ''ма градъ'' именьми бѣ.
+Града имѧ дано по обитавьшѹ тѣхъ мѣстѣхъ [[мь|ми]] племени ѥстъ.
+
+Лѣта 1583 градъ [[Свеньско|Свеньскѹ]] былъ прѣданъ бѣ, лѣта 1585 пакы былъ възвращенъ бѣ, лѣта 1617 пакы Свеньскѹ былъ прѣданъ по [[Стлъбовьскъ миръ|Стлъбовьскѹ мирови]] бѣ. Възвращенъ [[Рѡсї|Росїи]] по [[Сѣверьна рать|Сѣверьнѣ]] рати лѣтъ 1700—1721, нъ свеньско имѧ мбѹргъ («мъ Градъ») было съхранѥно бѣ.
+
+Лѣта 1708 градъ былъ прѣданъ [[Меншиковъ (кънѧѕь)|Меншикова Алеѯандра Данїиловища]] свѣтьлѣиша кънѧѕа владению бѣ. Съ лѣта 1784 почѧлъ быти ѹздьнъ градъ бѣ. Съ лѣта 1922 градъ нареченъ [[Кингисеппъ Викторъ Едѹардовищь|Кингисеппа]] [[Есть|Естьска]] коммѹнїста именьмь ѥстъ.
+
+==Геѡграфї==
+
+Построѥнъ рѣцѣ [[Лѹга (рѣка)|Лѹѕѣ]] ѥстъ. 
 
 {{commonscat|Kingisepp}}
 [[Category:Гради]][[Category:Лениноградьска область]]
