--- a/Варна.mw
+++ b/Варна.mw
@@ -7,6 +7,7 @@
 | Основанъ = 
 | Харта = [[Видъ:Varna location in Bulgaria.png|200 px]]
 |}}
+[[Видъ:Warna1.jpg|thumb|left]]
 '''Варна''' ѥстъ градъ [[Блъгарї|Блъгарїѩ]].  Варненскы краѩ главьнъ градъ ѥстъ. Людии обитаѥтъ 400 тысѫщь.
 
 [[Category:Гради]]
