--- a/Коуритиба.mw
+++ b/Коуритиба.mw
@@ -1,18 +1,20 @@
-[[Image:Curitiba - 2.jpg|310px|right|thumb| Curitiba, Brasil: [http://tools.wikimedia.de/~magnus/geo/geohack.php?language=en&params=25_25_47_S_49_16_19_W  25° 25' 47" S 49° 16' 19" O]]]
-[[Image:Brasão de Armas do Município de Curitiba.png|70px|left]]
-
-'''Куритиба''' ("''Curitiba''") — градъ на южьна [[Бразилия|Бразилии]]. Людии 3.595.662 обитаѥтъ.
-
-==Куритиба Градъ==
-*Основанъ ѥстъ: 1693
-*Людии обитаѥтъ: 1.788.559 (2007)
-
+{{Градъ|Имѧ = Кѹритиба
+| знамѧ= 
+| знакъ = Brasão de Armas do Município de Curitiba.png
+| Дрьжава = Бразилї
+| Глава = 
+| Людии = 1.788.559 (2007)
+| Основанъ = 1693
+| Харта = 
+}}
+[[Image:Curitiba - 2.jpg|310px|left|thumb| Curitiba, Brasil: [http://tools.wikimedia.de/~magnus/geo/geohack.php?language=en&params=25_25_47_S_49_16_19_W  25° 25' 47" S 49° 16' 19" O]]]
+'''Кѹритиба''' ("Curitiba") — градъ южьны [[Бразилї|Бразилїѩ]]. Людии 3.595.662 обитаѥтъ. Основанъ ѥстъ лѣта 1693
+ 
 ==Зьри такожде==
-
+{{Commonscat|Curitiba}}
 *http://www.curitiba.pr.gov.br 
 *http://www.curitiba-brazil.com 
-*[http://commons.wikimedia.org/wiki/Category:Curitiba Commons:Curitiba]
-
+[[Category:Гради]]
 [[ab:Цуритиба]]
 [[af:Curitiba]]
 [[als:Curitiba]]
