*Empty MediaWiki Message*

--- a/Москъва.mw
+++ b/Москъва.mw
@@ -7,7 +7,7 @@
 | Основанъ = 1147
 | Харта = [[Видъ:Moscow In Europe.png|200 px]]
 |}}
-'''Москъва''' ({{Lang-cu| Москы}}, генїка Москъве. словесе образъ Москъва съ рѹсьскаѥго ѩзыка ѩтъ ѥстъ, {{lang-ru|Москва}}) стольнъ градъ [[Рѡсї|Рѡсїѩ]] ѥстъ, построѥна ѥстъ рѣцѣ [[Москъва (рѣка)|Москъвѣ]]. [[Москъвьска область|Москъвьскы]] области главьнъ градъ ѥсть. Людии 10.472.629 обитаѥтъ.
+'''Москъва''' ({{Lang-cu| Москы}}, генїка Москъве. словесе образъ Москъва съ рѹсьскаѥго ѩзыка ѩтъ ѥстъ, {{lang-ru|Москва}}) стольнъ градъ [[Рѡсї|Рѡсїѩ]] ѥстъ, построѥна ѥстъ рѣцѣ [[Москъва (рѣка)|Москъвѣ]]. [[Москъвьска область|Москъвьскы]] области главьнъ градъ ѥсть. Людии 10.472.629 обитаѥтъ. Помѣновена запрьва лѣтописи лѣта 1147 ѥстъ.
 == Зьри такожде ==
 {{commonscat|Moscow}}
 {{Рѡсїѩ наибол҄ьше гради}}
