--- a/Коуритиба.mw
+++ b/Коуритиба.mw
@@ -7,11 +7,11 @@
 | Основанъ = 1693
 | Харта = [[Видъ:Parana Municip Curitiba.svg|200px]]
 }}
-
+[[Видъ:Curitiba - 2.jpg|left|thumb| Кѹритиба - Парана - Бразилї: [http://tools.wikimedia.de/~magnus/geo/geohack.php?language=en&params=25_25_47_S_49_16_19_W  25° 25' 47" S 49° 16' 19" O]]]
 '''Кѹритиба''' (''Curitiba'') — градъ южьны [[Бразилї|Бразилїѩ]]. Бразильскы дрьжавы [[Парана]] главьнъ градъ ѥстъ. Людии 1.788.559  обитаѥтъ. Основанъ ѥстъ лѣта 1693.
  
 ==Зьри такожде==
-[[Image:Curitiba - 2.jpg|310px|left|thumb| Curitiba, Brasil: [http://tools.wikimedia.de/~magnus/geo/geohack.php?language=en&params=25_25_47_S_49_16_19_W  25° 25' 47" S 49° 16' 19" O]]]
+
 {{Commonscat|Curitiba}}
 *http://www.curitiba.pr.gov.br 
 *http://www.curitiba-brazil.com 
